2005-03-21  Paolo Carlini  <pcarlini@suse.de>

PR c++/20461
	PR c++/20536
	* init.c (emit_mem_initializers): Don't crash on undefined
	types.

2005-03-21  Paolo Carlini  <pcarlini@suse.de>

	PR c++/20147
	* semantics.c (finish_stmt_expr_expr): Return immediately
	if error_operand_p (expr).


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@96784 138bc75d-0d04-0410-961f-82ee72b054a4